5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1613_2425.log
== TEST (2019-03-31 00:22:02) 
-- CODE:
n = 1
print(n, "km/l")
-- OUTPUT:
1 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:25:00) 
-- CODE:
d = float(input("Distância: "))
c = float(input("Combustível gasto: "))
f = d/c
print(round(f "km/l" , 2))
-- ERROR:
File "XXXX", line 4
    print(round(f "km/l" , 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:25:18) 
-- CODE:
d = float(input("Distância: "))
c = float(input("Combustível gasto: "))
f = d/c
print(round(f, "km/l" , 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(f, "km/l" , 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:25:45) 
-- CODE:
d = float(input("Distância: "))
c = float(input("Combustível gasto: "))
f = d/c
print(round(f "km/l", 2))
-- ERROR:
File "XXXX", line 4
    print(round(f "km/l", 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:26:12) 
-- CODE:
d = float(input("Distância: "))
c = float(input("Combustível gasto: "))
f = d/c
print(round(f, 2 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(f, 2 "km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:26:20) 
-- CODE:
d = float(input("Distância: "))
c = float(input("Combustível gasto: "))
f = d/c
print(round(f, 2, "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(f, 2, "km/l"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:26:45) 
-- CODE:
d = float(input("Distância: "))
c = float(input("Combustível gasto: "))
f = d/c
print(round(f, 2)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(f, 2)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:27:18) 
-- CODE:
d = float(input("Distância: "))
c = float(input("Combustível gasto: "))
f = d/c
print(round(f, 3), ("km/l"))
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:27:48) 
-- CODE:
d = float(input("Distância: "))
c = float(input("Combustível gasto: "))
f = d/c
print(round(f, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:28:31) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:28:43) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3 "km/l"))
-- EXECUTION TIME:
0.133429
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 4
    print(round(f, 3 "km/l"))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:28:51) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(f, 3 "km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:29:04) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:29:23) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3, "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(f, 3, "km/l"))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:29:56) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3) " km/l")
-- ERROR:
File "XXXX", line 4
    print(round(f, 3) " km/l")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:30:10) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3) (" km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(f, 3) (" km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:30:22) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3),(" km/l"))
-- OUTPUT:
14.286  km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:30:34) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3),("km/l"))
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:30:51) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel gasto: "))
f = d/c
print(round(f, 3),("km/l"))
-- EXECUTION TIME:
0.152092
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
